--- a/firebase/css/style.css
+++ b/firebase/css/style.css
@@ -47,3 +47,11 @@ min-height: 50px;
 #img-wikipedia{
     margin-left: -20px;
 }
+.custom-modal{
+    cursor: pointer;
+}
+
+.img-peligrosidad{
+    max-width:100px;
+    margin-right:10px;
+}
